--- a/src/main/conf/http2.properties
+++ b/src/main/conf/http2.properties
@@ -23,12 +23,12 @@
 # Default listen port lists; empty or zero value means no listen port
 # type list<string>
 # [string]
-listenpoint.LOCAL_PORT = 8080,8081
+listenpoint.LOCAL_PORT =
 
 # Default listen port lists for TLS transport; empty or zero means no listen port
 # type list<integer>
 # [string]
-listenpoint.LOCAL_PORT_TLS = 4430,4431
+listenpoint.LOCAL_PORT_TLS =
 
 
 #####################################################
