--- a/src/main/conf/imap.properties
+++ b/src/main/conf/imap.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 14300
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
@@ -44,7 +44,7 @@ listenpoint.LISTEN_TLS = true
 
 # Default listen port for TLS transport; empty or zero means listen.LOCAL_PORT + 1
 # [integer]
-listenpoint.LOCAL_PORT_TLS = 17300
+listenpoint.LOCAL_PORT_TLS =
 
 # Default transport for sending messages; possible values are : udp, tcp, sctp, tls
 # [enumeration] udp|tcp|sctp|tls
