--- a/src/main/conf/ngap.properties
+++ b/src/main/conf/ngap.properties
@@ -28,7 +28,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 3875
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
@@ -58,7 +58,7 @@ listenpoint.TRANSPORT = sctp
 
 # Default S1AP server address to send the request to
 # [string]
-DEFAULT_SERVER_URL=s1ap://127.0.0.1:3875
+DEFAULT_SERVER_URL=
 
 # transport for S1AP protocol (client mode)
 # BE CAREFUL : SCTP is supported only on LINUX platform
@@ -155,7 +155,7 @@ dictionary.PATH =
 # trace level for the S1AP stack : possible values are
 # ( OFF, ALL, SEVERE, WARNING, INFO, CONFIG, FINE, FINER, FINEST)
 # [enumeration] OFF|ALL|SEVERE|WARNING|INFO|CONFIG|FINE|FINER|FINEST
-TRACE_LEVEL= WARNING
+TRACE_LEVEL= OFF
 
 # test use only
 NB_ITERATION=10000
