--- a/src/main/conf/sigtran.properties
+++ b/src/main/conf/sigtran.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT =2905
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
