--- a/src/main/conf/sip.properties
+++ b/src/main/conf/sip.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 7070
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
@@ -97,13 +97,13 @@ operations.RECEIVE_TIMEOUT = 35
 # Flag to activate the automatic retransmission sending for messages
 # if true then a retransmission messages are sent
 # [boolean]
-retransmit.MANAGEMENT = true
+retransmit.MANAGEMENT = false
 
 # Flag to activate the retransmission filtering on messages receipt; 
 # if true then a retransmission messages are not routed to the scenario
 # they are ignored
 # [boolean]
-retransmit.FILTERING = true
+retransmit.FILTERING = false
 
 # Retransmission list of timers in seconds
 # type list<float>
@@ -160,7 +160,7 @@ route.MESSAGE_ID = header.CSeq,header.Call-ID
 # operation and are of course protocol dependant
 # type list<string> (list of path keywords)
 # [string]
-route.SCENARIO_NAME = listenpoint.localPort|listenpoint.name|message.protocol
+route.SCENARIO_NAME = channel.name|listenpoint.localPort|listenpoint.name|message.protocol
 # route.SCENARIO_NAME = header.To.Address.URI.User
 
 # This ID is used to identify retransmissions. A message having the same retranmissionId as a previous one
