--- a/src/main/conf/snmp.properties
+++ b/src/main/conf/snmp.properties
@@ -27,7 +27,7 @@ listenpoint.LOCAL_HOST =
 # port 162 is used by the manager (in standard way) to listen to trap
 # but this is just convention given by the RFC
 # [integer]
-listenpoint.LOCAL_PORT = 1161
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
