--- a/src/main/conf/tcp.properties
+++ b/src/main/conf/tcp.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 12000
+listenpoint.LOCAL_PORT =
 
 
 #######################################################
