--- a/src/main/conf/tls.properties
+++ b/src/main/conf/tls.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port for TLS transport; empty or zero means listen.LOCAL_PORT + 1
 # [integer]
-listenpoint.LOCAL_PORT_TLS = 13000
+listenpoint.LOCAL_PORT_TLS =
 
 
 #######################################################
