--- a/src/main/conf/diameter.properties
+++ b/src/main/conf/diameter.properties
@@ -28,7 +28,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 3871
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
@@ -36,11 +36,11 @@ listenpoint.LISTEN_UDP = false
 
 # Flag to listen to TCP transport
 # [boolean]
-listenpoint.LISTEN_TCP = false
+listenpoint.LISTEN_TCP = true
 
 # Flag to listen to SCTP transport
 # [boolean]
-listenpoint.LISTEN_SCTP = true
+listenpoint.LISTEN_SCTP = false
 
 # Flag to listen to TLS transport
 # [boolean]
@@ -269,7 +269,7 @@ node.WATCHDOG_INTERVAL = 30000
 # trace level for the DIAMETER stack : possible values are
 # ( OFF, ALL, SEVERE, WARNING, INFO, CONFIG, FINE, FINER, FINEST)
 # [enumeration] OFF|ALL|SEVERE|WARNING|INFO|CONFIG|FINE|FINER|FINEST
-TRACE_LEVEL= WARNING
+TRACE_LEVEL= OFF
 
 # test use only
 NB_ITERATION=10000
