--- a/src/main/conf/gtp.properties
+++ b/src/main/conf/gtp.properties
@@ -24,8 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 3386
-#listenpoint.LOCAL_PORT = 2123
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
