--- a/src/main/conf/http.properties
+++ b/src/main/conf/http.properties
@@ -23,12 +23,12 @@
 # Default listen port lists; empty or zero value means no listen port
 # type list<string>
 # [string]
-listenpoint.LOCAL_PORT = 8080,8081
+listenpoint.LOCAL_PORT =
 
 # Default listen port lists for TLS transport; empty or zero means no listen port
 # type list<integer>
 # [string]
-listenpoint.LOCAL_PORT_TLS = 4430,4431
+listenpoint.LOCAL_PORT_TLS =
 
 
 #####################################################
@@ -40,10 +40,10 @@ listenpoint.LOCAL_PORT_TLS = 4430,4431
 client.DEFAULT_PROTOCOL=http
 
 # Default Http client port
-client.DEFAULT_HTTP_PORT=8000
+client.DEFAULT_HTTP_PORT=80
 
 # Default Https client port
-client.DEFAULT_HTTPS_PORT=4430
+client.DEFAULT_HTTPS_PORT=443
 
 # Tell wether to use (or not) the non-blocking i/o stack. 
 # default false
@@ -106,7 +106,7 @@ route.MESSAGE_ID =
 # operation and are of course protocol dependant
 # type list<string> (list of path keywords)
 # [string]
-route.SCENARIO_NAME = message.protocol
+route.SCENARIO_NAME = channel.localPort|message.protocol
 
 # This ID is used to identify retransmissions. A message having the same retranmissionId as a previous one
 # will be handled has a retransmission. If it is a request it will eventually lead to the retransmission of
