--- a/src/main/conf/msrp.properties
+++ b/src/main/conf/msrp.properties
@@ -24,7 +24,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 2855
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
@@ -44,7 +44,7 @@ listenpoint.LISTEN_TLS = true
 
 # Default listen port for TLS transport; empty or zero means listen.LOCAL_PORT + 1
 # [integer]
-listenpoint.LOCAL_PORT_TLS = 7443
+listenpoint.LOCAL_PORT_TLS =
 
 # Default transport for endpoints; possible values are : udp, tcp, sctp, tls
 # [enumeration] udp|tcp|sctp|tls
@@ -68,7 +68,7 @@ operations.RECEIVE_TIMEOUT = 30
 
 # Retransmission filtering; a retransmission messages is not routed to the right scenario
 # [boolean]
-retransmit.FILTERING = true
+retransmit.FILTERING = false
 
 
 #######################################################
