--- a/src/main/conf/stun.properties
+++ b/src/main/conf/stun.properties
@@ -26,7 +26,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer]
-listenpoint.LOCAL_PORT = 34780
+listenpoint.LOCAL_PORT =
 
 # Flag to listen to UDP transport
 # [boolean]
